<resources>
    <string name="app_name">CIEPrinter</string>


    <string name="action_settings">Settings</string>
    <string name="stopping_print_service">Bluetooth Print Service Stopped</string>
    <string name="starting_print_service">Bluetooth Print Service Started</string>
    <string name="bt_not_supported">Device does not support Bluetooth</string>
    <string name="printer">Printer Connection :</string>
    <string name="action_clear_printer">Clear Printer</string>
    <string name="preferred_printer">Preferred Printer</string>
    <string name="clear_pref_printer">clear pref printer</string>
    <string name="set_pref_printer">set pref printer</string>
    <string name="about">About</string>
    <string name="img_capture_cancelled">Image capture cancelled.</string>
    <string name="img_capture_failed">Image capture failed</string>
    <string name="img_too_small">Image too small, please choose a bigger one.</string>
    <string name="btn_barcode">PRINT BARCODE</string>
    <string name="btn_qrcode">PRINT QRCODE</string>
    <string name="text_barcode">Enter the data to print barcode</string>
    <string name="text_qrcode">Enter the data to print qrcode</string>

    <string name="status_init"> </string>
    <string name="saveButtonText">Save</string>
    <string name="enterFileName">Enter file name:</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="cannotSaveFileMessage">Cannot save file</string>
    <string name="accessDenied">Access denied</string>
    <string name="missingFile">No such file</string>
    <string name="loadButtonText">Load</string>
    <string name="bt_switched_on">Bluetooth turned ON</string>
    <string name="information">Information</string>
    <string name="fileNameFirstMessage">Please enter the file name first</string>
    <string name="okButtonText">OK</string>
    <string name="bt_denied">Denied permission to turn on Bluetooth</string>
    <string name="newFolderButtonText">New folder</string>
    <string name="newFolderDialogMessage">Create new folder</string>
    <string name="createButtonText">Create</string>
    <string name="folderCreationOk">Folder created successfully</string>
    <string name="folderCreationError">Error while creating folder</string>
    <string name="status_printing">STATUS: Printing...</string>
    <string name="status_not_connected">STATUS: not connected</string>
    <string name="status_connecting">STATUS: connecting...</string>
    <string name="status_connection_failed">STATUS: connection failed, check printer</string>
    <string name="choose_a_picture">Choose a picture to set as logo</string>
    <string name="choose_gallery">Choose pic from Storage</string>
    <string name="choose_camera">Capture pic from Camera</string>
    <string name="as_is_preview">Photo Preview</string>
    <string name="logo_size">Image size: </string>
    <string name="empty"></string>
    <string name="printer_preview">Print Preview</string>
    <string name="set_logo">print direct</string>
    <string name="print_saved">print saved image</string>
    <string name="save_image">save image</string>
    <string name="print_logo">Print logo</string>
    <string name="adjust_contrast">Adjust Contrast</string>
    <string name="id">Image ID</string>
    <string name="invert_bitmap">Invert Image</string>
    <string name="platten_status">platten status</string>
    <string name="paper_status">paper status</string>
    <string name="battery_status">battery status</string>
</resources>
